Since OpenLeg 1.9 does not return bills in sorted order, I increased the pageSize to 100, then truncate the sorted results down to 10.  Also, bills now display as <billNumber> (sponsor): <position>.  Also, increased the width of the drop-down.  Fixes #8819

--- a/themes/Bluebird/css/Bluebird.css
+++ b/themes/Bluebird/css/Bluebird.css
@@ -1180,7 +1180,8 @@ div.crm-summary-display_name div.crm-icon {
 	margin-left: 5px;
 }
 
-#crm-container .tag-292-section div.token-input-dropdown-facebook {
+#crm-container .tag-292-section div.token-input-dropdown-facebook,
+div.token-input-dropdown-facebook {
 	width: 300px;
 }
 .civi-adv-search-body {
